--- a/Timer1/TTK.csproj
+++ b/Timer1/TTK.csproj
@@ -110,11 +110,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RndSeatPlan.cs">
+    <Compile Include="SeatingPlanGenerator.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RndSeatPlan.Designer.cs">
-      <DependentUpon>RndSeatPlan.cs</DependentUpon>
+    <Compile Include="SeatingPlanGenerator.Designer.cs">
+      <DependentUpon>SeatingPlanGenerator.cs</DependentUpon>
     </Compile>
     <Compile Include="Start.cs">
       <SubType>Form</SubType>
@@ -171,8 +171,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="RndSeatPlan.resx">
-      <DependentUpon>RndSeatPlan.cs</DependentUpon>
+    <EmbeddedResource Include="SeatingPlanGenerator.resx">
+      <DependentUpon>SeatingPlanGenerator.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Start.resx">
       <DependentUpon>Start.cs</DependentUpon>
